CSS files/style.css
@font-face {
  font-family: 'SourceSans3';
  src: url("/fonts/SourceSans3.ttf") format("ttf");
  font-display: swap;
}

@font-face {
  font-family: 'WorkSans';
  src: url("/fonts/WorkSans.ttf") format("ttf");
}

*{
  scrollbar-color: #ff3b3b #3c4050;
}

html{
    scroll-behavior: smooth;
    overflow: scroll;
}

body {
    background-color: #11131a;
    background-size: 1550px;
    color: #ffffff;
    margin: 0;
    font-family: "SourceSans3", sans-serif;
    font-weight: 600;
    font-size: 22px;
}

header{
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 0%;
    text-align: center;
    z-index: 1000;
}

.card-container{
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

.card{
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;


  width: 50vw;
  border-radius: 24px;
  
  padding: 50px;
  margin: 0px 0px 24px 0px;
}

#intro{
  display: flex;
  flex-direction: column;
  align-items: center;

  margin: 0%;
}

#first-card{
  background-color: #0e1015;
  box-shadow: 2px 2px 8px 2px #ff3b3b;
}

#first-card-header::selection{
  color: #d9d3ff;
  background-color: #ff3b3b;
}


#first-card-body::selection{
  color: #d9d3ff;
  background-color: #ff3b3b;
}

#third-card{
  background-color: #0e1015;
  box-shadow: 2px 2px 8px 2px #3b8dff;
}


#second-card-header::selection{
  color: #1d1d1d;
  background-color: #3bff52;
}


#second-card-body::selection{
  color: #1d1d1d;
  background-color: #3bff52;
}

.card-header{
  border-bottom: 1px solid #ff3b3b;
  margin-bottom: 18px;
}

#third-card-header{
  border-bottom: 1px solid #3b8dff;
}

#third-card-header::selection{
  color: #eeeeee;
  background-color: #3b8dff;
}

#third-card-body::selection{
  color: #eeeeee;
  background-color: #3b8dff;
}

#second-card{
  background-color: #0e1015;
  box-shadow: 2px 2px 8px 2px #3bff52;
}

#second-card-header{
  border-bottom: 1px solid #3bff52;
}

.containerHeading{
    display: flex;
    flex-direction: row;
    align-items: center;
    width: 100vw;
    margin-top: -0.5%;
    box-shadow: 1px 1px 15px #4b1111;
    background: linear-gradient(90deg, #11131a 20%, #ff3b3b 100%);
    text-align: center;
    position: fixed;
}

.icon{
    margin: 1%;
    margin-left: 85%;
    border-radius: 50%;
    cursor: pointer;
}

#showSidebarBtn{
  padding: 0%;
  padding: 6px 8px 6px 8px;
  margin: 1%;
  border-radius: 8px;
  border: none;
  background-color: #11131a;
  color: #ff3b3b;
  font-size: 26px;
  margin-left: 38px;
  cursor: pointer;
}

#showSidebarBtn:hover{
  background-color: #292929;
}

.sidebarHeader{
  display: flex;
  flex-direction: row;
  background-color: #121212;
  color: #ff3737;
  box-shadow: 0px 2px 6px #160505;
  padding: 6%;
  margin: 0%;
  gap: 3%;
}

.sidebarHeader h2{
  margin: 0%;
  font-size: 26px;
  font-weight: 900;
  padding: 8px;
}

#hideSidebarBtn{
  border: none;
  background-color: #121212;
  color: #ff3737;
  font-size: 28px;
  margin-left: 1%;
  margin-right: 3%;
}

#hideSidebarBtn:hover{
  cursor: pointer;
  border-radius: 4px;
}

.sidebar {
    width: 250px;
    background-color: #11131a; 
    position: fixed;
    height: 100%; 
    overflow: auto;
    margin-top: 0%;
    display: none;
    border-radius: 8px;
    box-shadow: 2px 2px 8px #4b1111;
    z-index: 1001;
}

.slideIn{
  animation: slideIn 0.5s forwards ease-out;
}

.slideOut{
  animation: slideOut 0.5s forwards ease-in;
}


.navLinks{
  display: flex;
  flex-direction: column;
  align-items:flex-start;
  list-style: none;
}

.navLinks a{
  color: #ff3737;
  text-decoration: none;
}

.navLinks li{
  font-size: 24px;
} 

.nav-link-container{
  display: flex;
  align-items: center;
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropbtn {
  background-color: #ff3b3b;
  color: #11131a;
  font-size: 26px;
  font-weight: 700;
  margin-left: 55%;
  border: none;
  cursor: pointer;
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: #11131a;
  font-size: 18px;
  min-width: 160px;
  border-radius: 12px;
  box-shadow: 0px 8px 16px 10px #11131a;
  z-index: 100;
  right: 0;         
  left: auto; 
  top: 100%;
}

#dropdownTitle{
  cursor: default;
  background-color: #11131a;
  color: #b63030;
  margin: 0%;
  padding: 2%;
  padding-top: 8%;
  padding-bottom: 8%;
  border-radius: 12px 12px 0px 0px;
}

.dropdown-content a {
  color: #ff3b3b;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

.dropdown-content a:hover {
  color:#11131a;
  background-color: #ff3b3b;
  border-radius: 12px;
}

#firstElement{
  border-radius: 0px 0px 8px 8px;
}

.dropdown:hover .dropdown-content {
  display: block;
  animation-name: fadeIn;
  animation-duration: 0.25s;
}

.dropdown::after .dropdown-content {
  display: block;
  animation-name: fadeOut;
  animation-duration: 0.25s;
}

main{
  padding-top: 8%;
}

#other{
  text-align: center;
  margin-bottom: 2%;
  opacity: 25%;
  font-size: 12px;
  text-decoration: underline;
}

#other a{
  cursor: pointer;
  opacity: 75%;
  color: #c2c2c2;
}


@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes fadeOut {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@keyframes slideIn {
  from {
    transform: translateX(-30vw);
    opacity: 0;
  }
  to {
    transform: translateX(0);
    opacity: 1;
  }
}

@keyframes slideOut {
  from {
    transform: translateX(0);
    opacity: 1;
  }
  to {
    transform: translateX(-30vw);
    opacity: 0;
  }
}

